--- a/FoodBistro_Blazor/Components/Pages/SignupComponent.razor
+++ b/FoodBistro_Blazor/Components/Pages/SignupComponent.razor
@@ -16,27 +16,29 @@
         <div class="card p-4 shadow" style="width: 22rem; background-color: #333; color: #eaeaea;">
             <h2 class="text-center mb-4">Sign-Up</h2>
 
-            <EditForm Model="@newUser" OnValidSubmit="HandleSignup">
+            <EditForm Model="@newUser" OnValidSubmit="HandleSignup" FormName="SignUpForm">
+                <DataAnnotationsValidator></DataAnnotationsValidator>
+                <ValidationSummary></ValidationSummary>
                 <hr />
 
                 <div class="mb-3">
                     <label for="firstNameInput" class="form-label text-light">First Name</label>
-                    <input @bind="newUser.FirstName" id="firstNameInput" class="form-control bg-dark text-light" placeholder="John" />
+                    <InputText @bind-Value="newUser.FirstName" id="firstNameInput" class="form-control bg-dark text-light" placeholder="John" />
                 </div>
 
                 <div class="mb-3">
                     <label for="lastNameInput" class="form-label text-light">Last Name</label>
-                    <input @bind="newUser.LastName" id="lastNameInput" class="form-control bg-dark text-light" placeholder="Doe" />
+                    <InputText @bind-Value="newUser.LastName" id="lastNameInput" class="form-control bg-dark text-light" placeholder="Doe" />
                 </div>
 
                 <div class="mb-3">
                     <label for="emailInput" class="form-label text-light">Email</label>
-                    <input @bind="newUser.Email" id="emailInput" class="form-control bg-dark text-light" placeholder="name@example.com" />
+                    <InputText @bind-Value="newUser.Email" id="emailInput" class="form-control bg-dark text-light" placeholder="name@example.com" />
                 </div>
 
                 <div class="mb-3">
                     <label for="passwordInput" class="form-label text-light">Password</label>
-                    <input @bind="newUser.Password" id="passwordInput" type="password" class="form-control bg-dark text-light" placeholder="password" />
+                    <InputText @bind-Value="newUser.Password" id="passwordInput" type="password" class="form-control bg-dark text-light" placeholder="password" />
                 </div>
 
                 <div class="d-flex justify-content-center">
