--- a/FoodBistro_Blazor/Components/_Imports.razor
+++ b/FoodBistro_Blazor/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using FoodBistro_Blazor
 @using FoodBistro_Blazor.Components
+@using System.ComponentModel.DataAnnotations
