--- a/FoodBistro_Blazor/Components/Layout/MainLayout.razor
+++ b/FoodBistro_Blazor/Components/Layout/MainLayout.razor
@@ -1,11 +1,16 @@
-﻿@inherits LayoutComponentBase
+﻿@using FoodBistro_Blazor.Models
+@using FoodBistro_Blazor.Services
+@inherits LayoutComponentBase
+
+@inject IUserService userService
 <div class="page">
     <div class="sidebar">
         <NavMenu />
     </div>
 
     <main>
-@*         <div class="top-row px-4">
+        
+       @*  <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div> *@
 
