--- a/FoodBistro_Blazor/Components/Pages/CartComponent.razor
+++ b/FoodBistro_Blazor/Components/Pages/CartComponent.razor
@@ -40,7 +40,14 @@
 }
 else
 {
-    <p>Your cart is empty.</p>
+    <div class="d-flex align-items-center justify-content-center col-lg-12 ">
+        <img src="Assets/cartimg.jpg" class="img-fluid rounded-start" style="height: 100px; object-fit: cover;" alt="Empty">
+       
+
+    </div>
+
+    <p class ="d-flex align-items-center justify-content-center col-lg-12 ">Your cart is empty.</p>
+
 }
 
 @code {
