--- a/FoodBistro_Blazor/Components/Pages/LoginComponent.razor
+++ b/FoodBistro_Blazor/Components/Pages/LoginComponent.razor
@@ -15,21 +15,28 @@
         <div class="card p-4 shadow" style="width: 22rem; background-color: #333; color: #eaeaea;">
             <h2 class="text-center mb-4">Log-In</h2>
 
-            <EditForm Model="@newUser">
+            <EditForm Model="@newUser_" OnValidSubmit="HandleLogin" FormName="loginForm">
+
+                <DataAnnotationsValidator></DataAnnotationsValidator>
+                @* <ValidationSummary></ValidationSummary> *@ @*Shows all the validations masgs*@
                 <hr />
 
                 <div class="mb-3">
                     <label for="emailInput" class="form-label text-light">Email</label>
-                    <input @bind="newUser.Email" id="emailInput" class="form-control bg-dark text-light" placeholder="name@example.com" />
+                    <InputText @bind-Value="newUser_.Email" id="emailInput_" class="form-control bg-dark text-light" placeholder="name@example.com" />
+                    <ValidationMessage For="@(()=>newUser_.Email)"></ValidationMessage>  @*For showing error msgs for individual fields*@
                 </div>
 
                 <div class="mb-3">
                     <label for="passwordInput" class="form-label text-light">Password</label>
-                    <input @bind="newUser.Password" id="passwordInput" type="password" class="form-control bg-dark text-light" placeholder="password" />
+                    <InputText @bind-Value="newUser_.Password" id="passwordInput_" type="password" class="form-control bg-dark text-light" placeholder="password" />
+                    <ValidationMessage For="@(()=>newUser_.Password)"></ValidationMessage>
+
                 </div>
 
                 <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary w-75" @onclick=HandleLogin>Log in</button>
+                    <button type="submit" class="btn btn-primary w-75">Log in</button>
+                    @* <input type="submit" value="Log In" /> *@
                 </div>
 
                 <div class="text-danger text-center mt-3">
@@ -44,12 +51,11 @@
 </div>
 
 @code {
-    private User newUser = new User();
-
+    private User newUser_ = new User();
 
     private async Task HandleLogin()
     {
-        bool result = userService.AuthenticateUser(newUser.Email, newUser.Password);
+        bool result = userService.AuthenticateUser(newUser_.Email, newUser_.Password);
         if (result == true)
         {
             Navigation.NavigateTo("/home");
